--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,27 +1,6 @@
 <%- include('layouts/header.ejs') %>
+<%- include('layouts/navbar.ejs') %>
 
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
-      <div class="container">
-        <a href="index.html" class="navbar-brand">Connect</a>
-
-
-        <div class="collapse navbar-collapse" id="navmenu">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a href="#Tech" class="nav-link">How can we help?</a>
-            </li>
-            <li class="nav-item">
-              <a href="#Careers" class="nav-link">Careers</a>
-            </li>
-            <li class="nav-item">
-              <a href="#Aboutus" class="nav-link">About us</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    
     <section
       class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start"
     >
