--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,6 +21,14 @@
         rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <!-- MDB -->
+    <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/mdb.min.css">
+    
+    <!-- CSS file -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
