--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -1,18 +1,17 @@
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
-    <div class="container">
-        <a href="progress" class="navbar-brand">Connect</a>
-        <div class="collapse navbar-collapse" id="navmenu">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a href="progress" class="nav-link">How can we help?</a>
-                </li>
-                <li class="nav-item">
-                    <a href="progress" class="nav-link">Careers</a>
-                </li>
-                <li class="nav-item">
-                    <a href="progress" class="nav-link">About us</a>
-                </li>
-            </ul>
-        </div>
+<!-- Start of navbar -->
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-555"
+    aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent-555">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item"><a class="nav-link" href="/">Dream Job</a></li>
+            <li class="nav-item"><a class="nav-link" href="progress">Connect</a></li>
+            <li class="nav-item"><a class="nav-link" href="progress">Careers</a></li>
+            <li class="nav-item"><a class="nav-link" href="progress">About us</a></li>
+        </ul>
     </div>
 </nav>
+<br><br>
+<!-- End of navbar -->
