--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,18 +7,11 @@
       <div class="container" style="padding-bottom: 2%;">
         <div class="d-sm-flex align-items-center justify-content-between">
           <div>
-          	<h1> " "</h1>
             <h1>Whats your dream Job?</span></h1>
             <p class="lead my-4">
               "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. ""
             </p>
-            <button
-              class="btn btn-primary btn-lg"
-              data-bs-toggle="modal"
-              data-bs-target="#enroll"
-            >
-             Sign Up 
-            </button>
+            <a href="progress" class="btn btn-primary" style="font-size: 90%;">Sign Up</a>
           </div>
           <img
             class="img-fluid w-50 d-none d-sm-block"
@@ -48,7 +41,7 @@
                 <ol>JavaScript</ol>             
               </ul>
                
-                <a href="#" class="btn btn-primary">Links</a>
+                <a href="progress" class="btn btn-primary">Links</a>
               </div>
             </div>
           </div>
@@ -66,7 +59,7 @@
               <ol>Python</ol> 
               <ol>JavaScript</ol>               
               </ul>
-                <a href="#" class="btn btn-primary">Links</a>
+                <a href="progress" class="btn btn-primary">Links</a>
               </div>
             </div>
           </div>
@@ -84,7 +77,7 @@
                 </ol>
                 <ol>Bootstrap</ol>                
               </ul>
-                <a href="#" class="btn btn-primary">Links</a>
+                <a href="progress" class="btn btn-primary">Links</a>
               </div>
             </div>
           </div>
