--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
           <div>
             <h1>Whats your dream Job?</span></h1>
             <p class="lead my-4">
-              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. ""
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
             <a href="progress" class="btn btn-primary" style="font-size: 90%;">Sign Up</a>
           </div>
