--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent-555">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item"><a class="nav-link" href="/">Dream Job</a></li>
-            <li class="nav-item"><a class="nav-link" href="progress">Connect</a></li>
+            <li class="nav-item"><a class="nav-link" href="forms">Student Portal</a></li>
             <li class="nav-item"><a class="nav-link" href="progress">Resources</a></li>
             <li class="nav-item"><a class="nav-link" href="progress">About us</a></li>
         </ul>
