links for Resources
 front end and backend links

--- a/views/progress.ejs
+++ b/views/progress.ejs
@@ -1,1 +1,7 @@
 <p>Work in progress</p>
+<ul>
+    <li><a href="https://www.learnjavaonline.org/">Learn Java</a></li>
+    <li><a href="https://www.learnpython.org/">Learn Python</a></li>
+    <li><a href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures/">Learn JavaScript</a></li>
+    <li><a href="https://www.freecodecamp.org/learn/responsive-web-design/">Learn Web Design</a></li>
+  </ul>
