--- a/views/progress.ejs
+++ b/views/progress.ejs
@@ -1,7 +1,62 @@
-<p>Work in progress</p>
-<ul>
-    <li><a href="https://www.learnjavaonline.org/">Learn Java</a></li>
-    <li><a href="https://www.learnpython.org/">Learn Python</a></li>
-    <li><a href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures/">Learn JavaScript</a></li>
-    <li><a href="https://www.freecodecamp.org/learn/responsive-web-design/">Learn Web Design</a></li>
-  </ul>
+<%- include('layouts/header.ejs') %>
+<%- include('layouts/navbar.ejs') %>
+<br>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <!-- Card -->
+      <div class="card" style="margin-bottom: 25px;">
+        <!-- Card image -->
+        <a href=""><img class="card-img-top showcase" src="/img/icons/java.png" alt="Card image cap"></a>
+        <!-- Card content -->
+        <div class="card-body">
+          <!-- Title -->
+          <a href="https://www.learnjavaonline.org/"><h4 class="card-title" style="min-height: 0px;">Learn Java</h4></a>
+        </div>
+      </div>
+      <!-- Card -->
+    </div>
+    <div class="col-md-4">
+      <!-- Card -->
+      <div class="card" style="margin-bottom: 25px;">
+        <!-- Card image -->
+        <a href=""><img class="card-img-top showcase" src="/img/icons/python.png" alt="Card image cap"></a>
+        <!-- Card content -->
+        <div class="card-body">
+          <!-- Title -->
+          <a href="https://www.learnpython.org/"><h4 class="card-title" style="min-height: 0px;">Learn Python</h4></a>
+        </div>
+      </div>
+      <!-- Card -->
+    </div>
+    <div class="col-md-4">
+      <!-- Card -->
+      <div class="card" style="margin-bottom: 25px;">
+        <!-- Card image -->
+        <a href=""><img class="card-img-top showcase" src="/img/icons/javascript.png" alt="Card image cap"></a>
+        <!-- Card content -->
+        <div class="card-body">
+          <!-- Title -->
+          <a href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures/"><h4 class="card-title" style="min-height: 0px;">Learn JavaScript</h4></a>
+        </div>
+      </div>
+      <!-- Card -->
+    </div>
+    <div class="col-md-4">
+      <!-- Card -->
+      <div class="card" style="margin-bottom: 25px;">
+        <!-- Card image -->
+        <a href=""><img class="card-img-top showcase" src="/img/icons/html.png" alt="Card image cap"></a>
+        <!-- Card content -->
+        <div class="card-body">
+          <!-- Title -->
+          <a href="https://www.freecodecamp.org/learn/responsive-web-design/"><h4 class="card-title" style="min-height: 0px;">Learn Web Design</h4></a>
+        </div>
+      </div>
+      <!-- Card -->
+    </div>
+  </div>
+</div>
+
+<%- include('layouts/footer.ejs') %>
