--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -8,7 +8,7 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item"><a class="nav-link" href="/">Dream Job</a></li>
             <li class="nav-item"><a class="nav-link" href="forms">Student Portal</a></li>
-            <li class="nav-item"><a class="nav-link" href="progress">Resources</a></li>
+            <li class="nav-item"><a class="nav-link" href="resources">Resources</a></li>
             <li class="nav-item"><a class="nav-link" href="progress">About us</a></li>
         </ul>
     </div>
