--- a/views/progress.ejs
+++ b/views/progress.ejs
@@ -1,3 +1,4 @@
+
 <style>
     * {
       box-sizing: border-box;
@@ -8,7 +9,7 @@
     }
     
     header {
-      background-color: rgb(0, 7, 45);
+      background-color: black;
       padding: 10px;
       text-align: center;
       font-size: 25px;
@@ -20,7 +21,6 @@
       float: left;
       width: 30%;
       height: 400px; 
-      background: rgb(154, 140, 152);
       padding: 20px;
     }
     
@@ -33,8 +33,8 @@
       float: left;
       padding: 20px;
       width: 70%;
-      background-color: rgb(201, 173, 167);
       height: 400px;
+      background:#ddd9d6;
     }
     
     section::after {
@@ -44,7 +44,7 @@
     }
     
     footer {
-      background-color: rgb(0, 7, 45);
+      background-color: black;
       padding: 10px;
       text-align: center;
       color: white;
@@ -107,20 +107,14 @@
 
     <p>Work in progress</p>
 
-    <ul>
-        <li><a href="https://www.learnjavaonline.org/">Learn Java</a></li>
-        <li><a href="https://www.learnpython.org/">Learn Python</a></li>
-        <li><a href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures/">Learn JavaScript</a></li>
-        <li><a href="https://www.freecodecamp.org/learn/responsive-web-design/">Learn Web Design</a></li>
-      </ul>
 
 </article>
 </section>
 
 <footer>
-<h2><p>We found!</p></h2>
+<h2><p>Students Found</p></h2>
 
-<a href="https:www.tamusa.edu/currentstudents/">Texas A&M Students</a>
+<a href="https:www.tamusa.edu/currentstudents/">Texas A&M - San Antonio Students</a>
 
 </footer>
 <script src = "app.js"></script>
